    * Add websocket_connect_async, websocket_connect_sync,
      websocket_disconnect_async, and websocket_disconnect_sync to
      cloudi_service_http_cowboy to handle (blocking) connection validation
      (i.e., synchronous connect service requests with
       websocket_connect_sync, websocket_connect remains the same as
       websocket_disconnect_async)

2014-05-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update semiocast pgsql driver
    * Make cloudi_service_db_pgsql crash on unsupported types

2014-05-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add debug output to cloudi_service_db_pgsql
    * Simplify cloudi_service_db_pgsql
    * Fix CLOUDI_CORE_STANDALONE cloudi_core dialyzer error

2014-05-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add another cloudi_service_db_pgsql test case to show driver differences
    * Update reltool_util

2014-05-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Cleanup cloudi_service_db_pgsql
        * Move the old epgsql wg driver modules/application/header
          so that its prefix is epgsql_wg
        * Add the semiocast pgsql driver
        * Add a common internal output format for both drivers
          (default to off, see internal_interface configuration,
           based on the semiocast attempt at supporting odbc)
        * Add more tests which use both drivers with the common internal
          output format
    * Update uuid

2014-05-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the error return types for the modules:
      cloudi, cloudi_service and cloudi_service_api
    * Fix a cloudi_service_init error for recv_asyncs function calls

2014-05-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add application dependencies to the release manually which
      reltool fails to find (syntax_tools, cloudi_x_lager, cloudi_x_goldrush)
    * Update the Erlang Binary Term Format for the new types in 17.0
