@@ -11,6 +11,9 @@
       (i.e., synchronous connect service requests with
        websocket_connect_sync, websocket_connect remains the same as
        websocket_disconnect_async)
+    * Make a custom status code work for websocket_connect usage
+      (websocket_connect_async/websocket_connect_sync) in
+      cloudi_service_http_cowboy
 
 2014-05-09 Michael Truog   <mjtruog [at] gmail (dot) com>
 
